@startuml

title __TODO's Class Diagram__\n

  namespace com.redrum.todo {
    class com.redrum.todo.DBHelper {
        + DBHelper()
        {static} + getAllData()
        {static} + getCheckedCount()
        {static} + insertData()
        {static} + insertData()
        + onCreate()
        + onUpgrade()
        {static} + updateDataBase()
    }
  }
  

  namespace com.redrum.todo {
    class com.redrum.todo.TouchHelper {
        + TouchHelper()
        + onChildDraw()
        + onMove()
        + onSwiped()
    }
  }
  

  com.redrum.todo.DBHelper -up-|> android.database.sqlite.SQLiteOpenHelper
  com.redrum.todo.TouchHelper -up-|> androidx.recyclerview.widget.ItemTouchHelper.SimpleCallback
  com.redrum.todo.TouchHelper o-- com.redrum.todo.adapter.TodoAdapter : adapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
